--- a/safetygear/shirtsandjeans.html
+++ b/safetygear/shirtsandjeans.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>24V AC Motors</title>
+  <title>FR Gear</title>
   <link rel="stylesheet" type="text/css" href="/assets/css/resistor.css">
   <link rel="stylesheet" type="text/css" href="/assets/css/style.css">
 
